// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersPage Test Add Roles 1`] = `
<div
  class="bp3-dialog Dialog--dialog"
  style="width: 600px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      <span>
        rbac.addRole
      </span>
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group bp3-disabled"
            data-id="users-0"
          >
            <label
              class="bp3-label"
              for="users"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="userRoleAssignementForm_users"
              >
                rbac.forUser
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper MultiSelect--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                    >
                      <div
                        class="bp3-tag-input-values"
                      >
                        <span
                          class="bp3-tag MultiSelect--tag"
                          data-tag-index="0"
                        >
                          <span
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
                            >
                              <div
                                class="Avatar--Avatar Avatar--contentStyle"
                              >
                                <span
                                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="Avatar--AvatarInner"
                                      style="border-radius: 100%; line-height: 12px; width: 16px; height: 16px; font-size: 7px;"
                                      tabindex="0"
                                    >
                                      A
                                    </div>
                                  </span>
                                </span>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                              >
                                abc
                              </p>
                            </div>
                          </span>
                        </span>
                        <input
                          autocomplete="off"
                          class="bp3-input-ghost bp3-multi-select-tag-input-input"
                          disabled=""
                          name="users"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main roleAssignments"
          >
            <div
              class="FieldArray--container containerProps"
            >
              <div
                class="Layout--horizontal StyledProps--main FieldArray--title"
              >
                <span
                  class="FieldArray--text"
                >
                  rbac.usersPage.assignRoleBindings
                </span>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                  data-id="btn-add"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Add
                  </span>
                </button>
              </div>
              <table
                cellspacing="0"
              >
                <thead>
                  <tr>
                    <th>
                      roles
                    </th>
                    <th>
                      resourceGroups
                    </th>
                    <th />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                placeholder="rbac.usersPage.selectRole"
                                style="padding-right: 0px;"
                                type="text"
                                value="Account Admin"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                data-testid="resourceGroup-0"
                                disabled=""
                                placeholder="rbac.usersPage.selectResourceGroup"
                                style="padding-right: 0px;"
                                type="text"
                                value="All Resources"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="FieldArray--deleteColumn"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        data-id="btn-delete"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="main-trash"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 20"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                placeholder="rbac.usersPage.selectRole"
                                style="padding-right: 0px;"
                                type="text"
                                value="Account Viewer"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                data-testid="resourceGroup-1"
                                disabled=""
                                placeholder="rbac.usersPage.selectResourceGroup"
                                style="padding-right: 0px;"
                                type="text"
                                value="All Resources"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="FieldArray--deleteColumn"
                    />
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                placeholder="rbac.usersPage.selectRole"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--intent-danger StyledProps--font-xsmall"
                        >
                          rbac.usersPage.validation.role
                        </p>
                      </div>
                    </td>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                data-testid="resourceGroup-2"
                                placeholder="rbac.usersPage.selectResourceGroup"
                                style="padding-right: 0px;"
                                type="text"
                                value="rbac.allResourcesIncludingChildScopes"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="FieldArray--deleteColumn"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        data-id="btn-delete"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="main-trash"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 16 20"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-large"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                common.apply
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`UsersPage Test Invite a User 1`] = `
<div
  class="bp3-dialog Dialog--dialog"
  style="width: 600px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      <span>
        rbac.usersPage.userForm.title
      </span>
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="users-0"
          >
            <label
              class="bp3-label"
              for="users"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="userRoleAssignementForm_users"
              >
                rbac.usersPage.userForm.userLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper MultiSelect--main bp3-fill"
              >
                <div
                  class="bp3-popover-target bp3-popover-open"
                >
                  <div
                    class=""
                  >
                    <div
                      class="bp3-input bp3-tag-input bp3-active bp3-multi-select"
                    >
                      <div
                        class="bp3-tag-input-values"
                      >
                        <span
                          class="bp3-tag MultiSelect--tag"
                          data-tag-index="0"
                        >
                          <span
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
                            >
                              <div
                                class="Avatar--Avatar Avatar--contentStyle"
                              >
                                <span
                                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <div
                                      class="Avatar--AvatarInner"
                                      style="border-radius: 100%; line-height: 12px; width: 16px; height: 16px; font-size: 7px;"
                                      tabindex="0"
                                    >
                                      A
                                    </div>
                                  </span>
                                </span>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                              >
                                Admin
                              </p>
                            </div>
                          </span>
                          <button
                            class="bp3-tag-remove"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-small-cross"
                              icon="small-cross"
                            >
                              <svg
                                data-icon="small-cross"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  small-cross
                                </desc>
                                <path
                                  d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                        <input
                          autocomplete="off"
                          class="bp3-input-ghost bp3-multi-select-tag-input-input"
                          name="users"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
                >
                  <div
                    class="bp3-transition-container bp3-popover-enter bp3-popover-enter-active"
                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                  >
                    <div
                      class="bp3-popover bp3-minimal bp3-multi-select-popover"
                      style="transform-origin: center top;"
                    >
                      <div
                        class="bp3-popover-content"
                      >
                        <div>
                          <ul
                            class="bp3-menu"
                          >
                            <li
                              class=""
                            >
                              <a
                                class="bp3-menu-item bp3-popover-dismiss"
                              >
                                <div
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  <div
                                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                                  >
                                    <div
                                      class="Avatar--Avatar Avatar--contentStyle"
                                    >
                                      <span
                                        class="bp3-popover-wrapper Avatar--avatarPopOver"
                                      >
                                        <span
                                          class="bp3-popover-target"
                                        >
                                          <div
                                            class="Avatar--AvatarInner"
                                            style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                                            tabindex="0"
                                          >
                                            A
                                          </div>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                                    >
                                      <p
                                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                                      >
                                        Admin
                                      </p>
                                      <p
                                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700"
                                      >
                                        admin@harness.io
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </a>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="undefined-1"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="userRoleAssignementForm_userGroups"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                  >
                    rbac.usersPage.userForm.userGroupLabel
                  </p>
                </div>
                <div
                  class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                >
                  <div
                    class="StyledProps--font StyledProps--main pointer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                    >
                      common.selectUserGroups
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main roleAssignments"
          >
            <div
              class="FieldArray--container containerProps"
            >
              <div
                class="Layout--horizontal StyledProps--main FieldArray--title"
              >
                <span
                  class="FieldArray--text"
                >
                  rbac.usersPage.assignRoleBindings
                </span>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                  data-id="btn-add"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Add
                  </span>
                </button>
              </div>
              <table
                cellspacing="0"
              >
                <thead>
                  <tr>
                    <th>
                      roles
                    </th>
                    <th>
                      resourceGroups
                    </th>
                    <th />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                placeholder="rbac.usersPage.selectRole"
                                style="padding-right: 0px;"
                                type="text"
                                value="common.accViewer"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-end"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                data-testid="resourceGroup-0"
                                disabled=""
                                placeholder="rbac.usersPage.selectResourceGroup"
                                style="padding-right: 0px;"
                                type="text"
                                value="rbac.allAccountResources"
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="FieldArray--deleteColumn"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-large"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                common.apply
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`UsersPage Test render data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="width: 350px;"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            newUser
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
      style="height: inherit;"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main selectedTabs StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          rbac.activeUsers
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          rbac.pendingUsers
        </span>
      </button>
    </div>
    <div
      class="Layout--horizontal StyledProps--main toolbar StyledProps--margin-right-small"
      style="width: 350px;"
    >
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 250px; max-width: 250px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="rbac.usersPage.search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="TableV2--table table"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 30%;"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="ActiveUsersListViewuser"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              users
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 45%;"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="ActiveUsersListViewroleBinding"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              rbac.usersPage.roleBinding
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="ActiveUsersListViewemail"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              email
            </p>
          </div>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="ActiveUsersListViewmenu"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              
            </p>
          </div>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main overflow StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <div
                class="Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      A
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 100%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  abc
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 45%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <span
                class="bp3-tag harnesstag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/roles/_account_admin"
                  >
                    Account Admin
                  </a>
                   - 
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/resource-groups/_all_account_level_resources"
                  >
                    All Resources
                  </a>
                </span>
              </span>
              <span
                class="bp3-tag harnesstag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/roles/_account_viewer"
                  >
                    Account Viewer
                  </a>
                   - 
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/resource-groups/_all_account_level_resources"
                  >
                    All Resources
                  </a>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main roleButton Button--with-current-color Button--variation Button--variation-link"
                data-testid="addRole-123"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.plusNumber
                </span>
              </button>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <div
              class="Layout--horizontal StyledProps--main overflow StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                abc@harness.io
              </p>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 5%;"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-end"
            >
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="menu-123"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main overflow StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <span
                class="bp3-icon bp3-icon-lock StyledProps--main lockIcon StyledProps--border StyledProps--color StyledProps--color-white StyledProps--background-grey300 StyledProps--flex StyledProps--flex-align-center-center StyledProps--margin-left-xsmall StyledProps--margin-right-xsmall"
                icon="lock"
                style="width: 32px; height: 32px;"
              >
                <svg
                  data-icon="lock"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    lock
                  </desc>
                  <path
                    d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 100%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  abc2
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400"
                >
                  rbac.usersPage.lockedOutLabel
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 45%;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <span
                class="bp3-tag harnesstag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/roles/_account_admin"
                  >
                    Account Admin
                  </a>
                   - 
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/resource-groups/_all_account_level_resources"
                  >
                    All Resources
                  </a>
                </span>
              </span>
              <span
                class="bp3-tag harnesstag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/roles/_account_viewer"
                  >
                    Account Viewer
                  </a>
                   - 
                  <a
                    class="link"
                    href="/account/testAcc/settings/organizations/org/setup/access-control/resource-groups/_all_account_level_resources"
                  >
                    All Resources
                  </a>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main roleButton Button--with-current-color Button--variation Button--variation-link"
                data-testid="addRole-locked"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.plusNumber
                </span>
              </button>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <div
              class="Layout--horizontal StyledProps--main overflow StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-right-small"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                abc2@harness.io
              </p>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 5%;"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-end"
            >
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="menu-locked"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
      >
        <span
          class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
        >
          2
           of 
          2
        </span>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
              icon="arrow-left"
            >
              <svg
                data-icon="arrow-left"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  arrow-left
                </desc>
                <path
                  d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Prev
            </span>
          </button>
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              1
            </span>
          </button>
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Next
            </span>
            <span
              class="bp3-icon bp3-icon-arrow-right StyledProps--main"
              icon="arrow-right"
            >
              <svg
                data-icon="arrow-right"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  arrow-right
                </desc>
                <path
                  d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <span>
          Showing 10 per page
        </span>
      </div>
    </div>
  </div>
</div>
`;
